k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pal-tracker
  labels:
    app: pal-tracker
spec:
  selector:
    matchLabels:
      app: pal-tracker
      name: pal-tracker-pod
  template:
    # Pod definition starts here
    metadata:
      labels:
        app: pal-tracker
        name: pal-tracker-pod
    spec:
      containers:
        - name: pal-tracker-container
          image: nhsieh/pal-tracker:build-6
          resources:
            limits:
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 150
          lifecycle:
            preStop:
              exec:
                command: ["bin/sleep", "10"]
